fix: beta tag is not wrapping on dota2 rankings

--- a/stylesheets/commons/RankingTable.less
+++ b/stylesheets/commons/RankingTable.less
@@ -25,7 +25,7 @@
 		border-bottom: var( --_border );
 		font-weight: normal;
 
-		&-row-text {
+		&-text {
 			display: flex;
 			flex-direction: column;
 		}
